@@ -1,6 +1,6 @@
 BSD LICENSE
 
-Copyright (c) 2009-2013, Michael Truog <mjtruog at gmail dot com>
+Copyright (c) 2009-2014, Michael Truog <mjtruog at gmail dot com>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
